# overtrack-game-processing

./: .gitignore  README.md  build.py  contenders_games.sh  decodetest.py  live_scoreboard_old.py  local_capture.py  main.py  mypy.ini  process_vid.py  pyproject.toml  reprocess_game.py  requirements.txt  set_user_stream_key.py
.github/workflows/: codeql-analysis.yml
api/: main.py
clipper/: main.py
data/: tesserocr-2.2.2-cp36-cp36m-win_amd64.whl
models/: __init__.py  apex_game_summary.py  common.py  notifications.py  overwatch_game_summary.py  overwatch_hero_stats.py  owl_clip.py  player_events.py  share_link.py  streams.py  subscription_details.py  user.py
overtrack/: data.py  frame.py  performance_monitor.py  performance_monitorr.py  processor.py  twitch_bot.py
overtrack/apex/: data.py  stats.py
overtrack/apex/collect/: __init__.py  apex_game.py  apex_game_extractor.py  notifications.py
overtrack/apex/collect/apex_game/: __init__.py  apex_game.py  combat.py  rank.py  route.py  route_.py  squad.py  weapons.py
overtrack/apex/data/: __init__.py  _champions.py  _map_locations.py  _ranks.py  _rounds.py  _seasons.py  _weapons.py  champions.py  map_locations.py  ranks.py  rounds.py  seasons.py  weapons.py
overtrack/apex/game/: default_pipeline.py
overtrack/apex/game/_select/: select_processor.py
overtrack/apex/game/combat/: __init__.py  combat_processor.py  models.py
overtrack/apex/game/map/: __init__.py  map_processor.py  models.py
overtrack/apex/ocr/: __init__.py
overtrack/capture/: obs_capture.py  requirements.txt
overtrack/data_collection/: names_from_overtrack.py  names_from_spectate.py
overtrack/ocr/: big_noodle.py  big_noodle_ctc.py  digit.py
overtrack/ocr/data/: big_noodle.npz  big_noodle_ctc.npz  tab_ocr.npz
overtrack/training/: names_from_overtrack.py  names_from_spectate.py
overtrack/util/: __init__.py  arrayops.py  common_resolutions.py  compat.py  custom_layers.py  debugops.py  frameload.py  frames_cache.py  imageops.py  logging_config.py  prettyprint.py  referenced_typedload.py  region_extraction.py  textops.py  tf.py  tflite.py  uploadable_image.py
overtrack/util/typedload/: __init__.py  frameload.py  referenced_typedload.py  typedload.py
overtrack/valorant/: reprocess_frames.py
overtrack/valorant/collect/: __init__.py  kills.py  notifications.py  rounds.py  teams.py  valorant_game.py
overtrack/valorant/data/: __init__.py  _agents.py  _game_versions.py  _maps.py
overtrack/valorant/game/: default_pipeline.py  valorant_game_extractor.py
overtrack/valorant/ocr/: __init__.py
overtrack/valorant/relational/: __init__.py  import_games.py  models.py  record_game.py
overtrack_legacy/models/: game.py  game_processed.py  hero_stat.py  share_link.py  user.py  util.py
owl/: owl_processor.py  vid2rawframes.py
scripts/: check_stream_bitrate.py  collect_big_noodle_images.py  extract_loading_frames.py  get_channels_with_extension.py  get_twitch_user_id.py  local_capture.py  ocr_tab_stats.py  update_do_firewall.py
stream/: requirements.txt  twitch.py  video.py
testing/dev/: cache.py  comp_screen.py  endgame.py  frames_to_game.py  killcam.py  killfeed.py  menu_screen.py  objective_video.py  process_video.py  processors.py  reprocess_ot_game.py  tab_screen.py  test_games.py
testing/tests/: test_games.py  test_games_full_killfeed.py  test_killfeed.py  test_killfeed_samples.py
testing/tests/full_games/: edgy_name.py  qp_8res.py
tools/: check_stream_bitrate.py  download_names_from_contenders.py
training/: extract_loading_frames.py  inference.py  objective.py
training/killfeed/: from_games.py
training/killfeed/extract/: killrow_extraction.py
training/killfeed/parse/: killrow_parse.py
training/owl/: extract_kills.py
util/: __init__.py
(+64 files in other folders)
