[tool.poetry]
name = "overtrack"
version = "0.1.0"
description = ""
authors = ["Simon Pinfold <simon@uint8.me>"]

[tool.poetry.dependencies]
python = "^3.6"
setuptools = "^41"

overtrack-models = { git = "git@gitlab.com:OverTrack/overtrack-models.git", branch = "master" }

# base requirements
requests = "^2"
dataclasses = "*"
python-dateutil = "^2.7"
shortuuid = "*"

tqdm = "*"
tabulate = "*"

# embedded web servers
# aiohttp = "^3.5"
cherrypy = "^18"

# ingest instance management
# python-digitalocean = { git = "https://github.com/koalalorenzo/python-digitalocean.git" }

# image/data processing
numpy = "^1"
scipy = "^1"
opencv-python = "^4.0"
tensorflow = "^2.0.0-beta1"
tesserocr = "^2.4"
editdistance = "*"
python-Levenshtein = "*"
#python-Levenshtein-wheels = "*"

# video/stream/vod extraction
av = "^6"
streamlink = { git = "https://github.com/streamlink/streamlink.git" }

# storage
# pynamodb = "^4"
# boto3 = "^1"

# log+error reporting
# sentry-sdk = "^0.11"
# google-cloud-logging = "^1"

# twitch overlay
pyjwt = "*"

[tool.poetry.dev-dependencies]

pytest = "*"
pytest-ordering = "*"
pytest-sugar = "*"
pytest-cov = "*"
moto = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
