[tool.poetry]
name = "overtrack"
version = "0.1.0"
description = ""
authors = ["Simon Pinfold <simon@uint8.me>"]

[tool.poetry.dependencies]
python = "^3.7.4"
setuptools = "^41"

overtrack-models = { git = "https://gitlab.com/OverTrack/overtrack-models.git", branch = "master" }

# base requirements
requests = "^2"
dataclasses = "*"
python-dateutil = "^2.7"
shortuuid = "*"

tqdm = "*"
tabulate = "*"

# embedded web servers
# aiohttp = "^3.5"
# cherrypy = "^18"  # pulls functools??

# image/data processing
numpy = "^1"
scipy = "^1"
opencv-python = "^4.0"
# tesserocr = { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.4.0-tesseract-4.0.0/tesserocr-2.4.0-cp36-cp36m-win_amd64.whl", version="2.4" }
editdistance = "*"

# video/stream/vod extraction
# av = "^6"  # extra dependency that is not required, but gives useful data sometimes
# streamlink = { git = "https://github.com/streamlink/streamlink.git" }

# extras used in some sub projects
# pynamodb = "^4"
# boto3 = "^1"
# sentry-sdk = "^0.11"
# google-cloud-logging = "^1"
# pyjwt = "*"

[tool.poetry.dev-dependencies]

pytest = "*"
pytest-ordering = "*"
pytest-sugar = "*"
pytest-cov = "*"
#moto = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
